fix() : java version change => toList()->collection(Collectors.toList())